--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@reduxjs/toolkit": "^1.6.1",
+    "nanoid": "^3.1.28",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-redux": "^7.2.5"
+    "react-redux": "^7.2.5",
+    "react-router-dom": "^5.3.0",
+    "socket.io-client": "^4.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.0",
