--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-redux": "^7.2.5",
-    "react-router-dom": "^5.3.0"
+    "react-router-dom": "^5.3.0",
+    "socket.io-client": "^4.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.0",
